Closed Bug 899477 Opened 11 years ago Closed 11 years ago

COMPONENT_DIRECTORY is not used

Categories

(Core :: XPCOM, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: authornari, Assigned: authornari)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/28.0.1500.71 Chrome/28.0.1500.71 Safari/537.36

Steps to reproduce:

none


Actual results:

none


Expected results:

I think COMPONENT_DIRECTORY is not used, so this can be deleted.
# It's trivial fix.
Comment on attachment 783022 [details] [diff] [review]
remove_unused_macro.patch

Thanks for the patch Narihiro. The best thing is to request a review for the patch or your bug/patch could get lost in bugzilla. I will try Benjamin because he reviewed the last patches that touched that file: http://hg.mozilla.org/mozilla-central/filelog/129ce98f4cb2/xpcom/io/nsDirectoryService.cpp
Attachment #783022 - Flags: review?(benjamin)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #783022 - Flags: review?(benjamin) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/cf0e16799122

Thanks for the patch! One request - please make sure you have Mercurial configured per the link below so that your patches have all the needed commit information in them. Makes life easier for those checking in on your behalf. Thanks!
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Assignee: nobody → authornari
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/cf0e16799122
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: