Bug 899477 - Remove unused COMPONENT_DIRECTORY macro. r=bsmedberg