xpcom/io/nsDirectoryService.cpp
@@ -42,8 +42,6 @@
 
 using namespace mozilla;
 
-#define COMPONENT_DIRECTORY     NS_LITERAL_CSTRING("components")
-
 // define home directory
 // For Windows platform, We are choosing Appdata folder as HOME
 #if defined (XP_WIN)
